精简的修改啊

--- a/数组中有对象的去重方法的封装.html
+++ b/数组中有对象的去重方法的封装.html
@@ -109,8 +109,8 @@
 
 
         var arr = uniqeByKeys(oldArr, ['id', 'name', 'age', 'contact_id']);
-        // console.log(arr)
-        var arr1 = uniqeByKeys(arrll, ["name"])
+        console.log(arr)
+        var arr1 = uniqeByKeys(arrll, ["name", "age"])
         console.log(arr1)
     </script>
 </body>
