--- a/滚动条插件/index.html
+++ b/滚动条插件/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="../lib/jquery-1.7.1.min.js"></script>
+    <script src="./jquery-1.7.1.min.js"></script>
     <script src="./jq22jquery.nicescroll655201711192354/jquery.nicescroll/jquery.nicescroll.js"></script>
     <style>
         #boxscroll {
